--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap');
+
+body {
+    font-family: 'Fira Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 .nav-bar {
     display: flexbox;
     align-items: center;
@@ -11,4 +17,33 @@
 
 .nav-links li {
     padding: 10px 10px 10px 5px
+}
+
+.nav-links li:hover {
+    background-color: aqua;
+    text-underline-position: below;
+}
+
+.main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.main-problems {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.text-area p {}
+
+.problems-display {
+    margin-top: 35vh;
+}
+
+.title {
+    font-weight: bolder;
+    font-size: min(5vw, 36px);
 }
